WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93141
[BlackBerry] FrameLoaderClient::restoreViewState() shouldn't trigger painting
https://bugs.webkit.org/show_bug.cgi?id=93141
Summary
[BlackBerry] FrameLoaderClient::restoreViewState() shouldn't trigger painting
Yong Li
Reported
2012-08-03 10:46:39 PDT
It is neither safe nor efficient to paint contents in this function
Attachments
the patch
(6.41 KB, patch)
2012-08-03 10:56 PDT
,
Yong Li
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yong Li
Comment 1
2012-08-03 10:56:48 PDT
Created
attachment 156418
[details]
the patch
Rob Buis
Comment 2
2012-08-03 11:10:45 PDT
Comment on
attachment 156418
[details]
the patch LGTM.
Antonio Gomes
Comment 3
2012-08-03 11:17:57 PDT
Conscidence or not, this crash started appearing after Jakob's count-based suspend/resume backingstore patch. cc him, as he last touched it.
Antonio Gomes
Comment 4
2012-08-03 11:18:28 PDT
Jacky, Pepeto: feel free to comment...
Yong Li
Comment 5
2012-08-03 11:24:43 PDT
Comment on
attachment 156418
[details]
the patch cancelling for now
Yong Li
Comment 6
2012-08-03 11:37:55 PDT
Comment on
attachment 156418
[details]
the patch commit again. with nested suspend/resume, it is no longer safe to leave a single suspend call there. we can easily strip off the message when we find a better solution
WebKit Review Bot
Comment 7
2012-08-03 12:58:34 PDT
Comment on
attachment 156418
[details]
the patch Clearing flags on attachment: 156418 Committed
r124643
: <
http://trac.webkit.org/changeset/124643
>
WebKit Review Bot
Comment 8
2012-08-03 12:58:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug