[BlackBerry] FrameLoaderClient::restoreViewState() shouldn't trigger painting https://bugs.webkit.org/show_bug.cgi?id=93141

Patch by Yong Li <yoli@rim.com> on 2012-08-03
Reviewed by Rob Buis.

PR# 172041.
It is not always safe to render the page at this point. So we post a message
instead.

* Api/WebPage.cpp:
(WebKit):
(BlackBerry::WebKit::WebPagePrivate::restoreHistoryViewState):
* Api/WebPage_p.h:
(WebPagePrivate):
* WebCoreSupport/FrameLoaderClientBlackBerry.cpp:
(WebCore::FrameLoaderClientBlackBerry::restoreViewState):

Canonical link: https://commits.webkit.org/110989@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124643 268f45cc-cd09-0410-ab3c-d52691b4dbfc